--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -5,6 +5,6 @@
   "main": "index.js",
   "dependencies": {
     "loader-utils": "^1.2.3",
-    "@rst-js/writer": "latest"
+    "@rst-js/writer": "0.0.0-managed-by-release-script"
   }
 }
