--- a/package.json
+++ b/package.json
@@ -38,10 +38,9 @@
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.7",
-    "et-scripts": "^0.0.1",
+    "et-scripts": "^0.0.2",
     "husky": "^2.4.0",
     "jest": "^24.8.0",
-    "lint-staged": "^8.2.0",
-    "react": "^16.8.6"
+    "lint-staged": "^8.2.0"
   }
 }
