--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -4,6 +4,7 @@
   "description": "reStructuredText loader for Webpack",
   "main": "index.js",
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "loader-utils": "^1.2.3",
     "@rst-js/writer": "0.0.0-managed-by-release-script"
   }
