--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3-6",
   "main": "dist/index.js",
   "umd:main": "dist/rst-loader.umd.production.js",
   "module": "dist/rst-loader.es.production.js",
@@ -34,13 +34,14 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.7",
     "et-scripts": "^0.0.2",
     "husky": "^2.4.0",
     "jest": "^24.8.0",
-    "lint-staged": "^8.2.0"
+    "lint-staged": "^8.2.0",
+    "pegjs": "^0.10.0",
+    "react": "^16.8.6"
   }
 }
